Use relative widths to ensure posts do not grow too much when using flex.

--- a/less/bootstrap3/bin-publisher.less
+++ b/less/bootstrap3/bin-publisher.less
@@ -5,7 +5,8 @@ bin-blog-feed {
     bin-blog-post {
       flex-grow: 1;
       margin: 30px 0 30px 30px;
-      width: 200px;
+      width: 22%;
+      max-width: 22%;
     }
   }
 }
